# vlfeat

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  COPYING  Makefile  Makefile.doc  Makefile.mak  README  README.md  TIMESTAMP  TODO  copylet.txt  description  doxygen.conf  mdoc.pl  update-mak.sh  updateMakeFileBuildTestVS2017.m  vlfeat.sln  vlfeat.vcproj
.travis/: tests.sh
apps/: phow_caltech101.m  phow_caltech101_2.m  phow_caltech101_fish.m  phow_caltech101_vlad.m  sift_mosaic.m
apps/recognition/: encodeImage.m  experiments.m  extendDescriptorsWithGeometry.m  getDenseSIFT.m  readImage.m  setupCaltech256.m  setupFMD.m  setupGeneric.m  setupScene67.m  setupVoc.m  trainEncoder.m  traintest.m
data/: box.pgm  box.sift  circle.pgm  circle.sift  vessel-1.pgm  vessel-2.pgm
doc/: Makefile  copylet.txt  doxygen.conf  doxygen.css  formatter.py  m2ascii.py  mdoc.py  mdocall.py  vl.cfg  vlfeat.bbl  vlfeat.tex  webdoc.py  wikidoc.py
doc/figures/: Makefile  sift-angle.fig  sift-bins.fig  sift-orient.fig
docsrc/: about.html  aib.html  api.html  apps.html  compiling.html  copylet.txt  covdet.html  doc.html  download.html  doxygen.conf  doxygen.css  doxygen_footer.html  doxygen_header.html  doxytag.py  dsift.html  encode.html  formatter.py  gmm.html  hikm.html  hog.html  ikm.html  imdisttf.html  index.html  install-c.html  install-matlab.html  install-octave.html  install-shell.html  kdtree.html  kmeans.html  license.html  liop.html  mdoc.py  mser.html  notfound.html  pegasos.html  plots-rank.html  quickshift.html  roadmap.html  sift.html  slic.html  (+17 more)
docsrc/figures/: cell-bins.fig  dhog-bins.fig  dsift-geom.fig  mser-tree.fig  sift-bins.fig  sift-can.fig  sift-conv-vlfeat.fig  sift-conv.fig  sift-descr-easy.fig  sift-frame.fig  sift-image-frame.fig
docsrc/images/: vl_blue.pxm  vl_blue_large.pxm
docsrc/tutorials/: aib.html  covdet.html  encode.html  frame.html  gmm.html  ikm.html  imdisttf.html  kdtree.html  liop.html  plots-rank.html  quickshift.html
figures/: Makefile  mser-er.fig  sift-bins.fig  sift-ss.fig
make/: bin.mak  dist.mak  dll.mak  doc.mak  lib.mak  macos_relink_omp.sh  matlab.mak  nmake_helper.mak  octave.mak  update-mak.sh
src/: aib.c  check.h  generic-driver.h  ib.c  mser.1  mser.c  sift-driver.c  sift.1  sift.c  test_gauss_elimination.c  test_getopt_long.c  test_gmm.c  test_heap-def.c  test_heap-t.c  test_heap.c  test_host.c  test_imopv.c  test_kmeans.c  test_liop.c  test_mathop.c  test_mathop_abs.c  test_mathop_fast_resqrt.tc  test_mathop_fast_sqrt_ui.tc  test_nan.c  test_qsort-def.c  test_rand.c  test_sqrti.c  test_stringop.c  test_svd2.c  test_threads.c  test_vec_comp.c  vl-config  vlfeat.7
toolbox/: aib.c  aib.m  aib.mex.c  aibcut.m  aibcuthist.m  aibhist.c  aibpush.m  aibquantize.m  alldist2.c  alldist2.m  binsum.c  binsum.m  cf.m  click.m  clickpoint.m  clicksegment.m  comparesift.m  ddgaussian.m  dgaussian.m  dsigmoid.m  dwaffine.m  erfill.c  ertr.m  gaussian.m  harris.m  help_vlfeat.m  hikmeans.c  hikmeanshist.m  hikmeanspush.c  hikmeanspush.m  histmarg.m  ib.mex.c  ihashfind.c  ihashsum.c  ikmeans.c  ikmeans.m  ikmeans.mex.c  ikmeanspush.c  ikmeanspush.m  ikmeanspush.mex.c  (+69 more)
toolbox/aib/: aib.c  aib.m  aibcut.m  aibcuthist.m  aibcutpush.m  aibhist.c  aibhist.m  vl_aib.c  vl_aib.m  vl_aibcut.m  vl_aibcuthist.m  vl_aibcutpush.m  vl_aibhist.c  vl_aibhist.m
toolbox/bsarray/: bsarray_utils.h  vl_bsarray.m  vl_bsarray_add_block.c  vl_bsarray_full.c  vl_bsarray_mtimes.c  vl_bsarray_new.c  vl_bsmatrix_add_column.c  vl_bsmatrix_full.c  vl_bsmatrix_list_add_column.c  vl_bsmatrix_list_delete.c  vl_bsmatrix_list_get.c  vl_bsmatrix_list_new.c  vl_bsmatrix_new.c
toolbox/demo/: demo_aib.m  demo_cmd.m  demo_mser_cmd.m  demo_print.m  demo_sift_basic.m  demo_sift_cmd.m  demo_sift_peak.m  vl_demo_aib.m  vl_demo_alldist.m  vl_demo_bsarray_basic.m  vl_demo_caltech101.m  vl_demo_cmd.m  vl_demo_covdet.m  vl_demo_dsift.m  vl_demo_frame.m  vl_demo_gmm_2d.m  vl_demo_gmm_2d_rand.m  vl_demo_gmm_2d_twist.m  vl_demo_gmm_3d.m  vl_demo_gmm_convergence.m  vl_demo_hog.m  vl_demo_ikmeans.m  vl_demo_imdisttf.m  vl_demo_kdtree.m  vl_demo_kdtree_ann.m  vl_demo_kdtree_forest.m  vl_demo_kdtree_plot.m  vl_demo_kdtree_self.m  vl_demo_kdtree_sift.m  vl_demo_kmeans_2d.m  vl_demo_kmeans_ANNspeed.m  vl_demo_kmeans_ann_speed.m  vl_demo_kmeans_init.m  (+18 more)
vl/: Makefile  aib.c  aib.h  array.c  array.h  bsarray.c  bsarray.h  bsmatrix.c  bsmatrix.h  covdet.c  covdet.h  covdet2.c  covdet2.h  dft.c  dft.h  dhog.c  dhog.h  dsift.c  dsift.h  fisher.c  fisher.h  float.th  generic.c  generic.h  getopt_long.c  getopt_long.h  gmm.c  gmm.h  heap-def.h  heap-t.h  heap.c  heap.h  hikmeans.c  hikmeans.h  hog.c  hog.h  homkermap.c  homkermap.h  host.c  host.h  (+68 more)
vlfeat.xcodeproj/: project.pbxproj
wiki/: .mediawiki
(+386 files in other folders)
